# kcptun-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  release.sh  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/: CMakeLists.txt  android_client_main.cpp  clean.bash  make.bash
app/src/android-compat/: cpu-features.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/shadowsocks/plugin/shimakaze/: BinaryProvider.kt  HelpCallback.kt
app/src/patches/: kcptun.patch
gradle/wrapper/: gradle-wrapper.properties
